test/fail/basic_syntax/bad_anon_call.lly
#[
SyntaxError: Cannot anonymously call resulting type 'integer'.
Where: File "bad_anon_call.lly" at line 6
]#

10.@(integer)()
